#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([bashfoo],[0.0.1],[z.zagorski@gmail.com])

AC_CONFIG_AUX_DIR([autoconf_helpers/])
AC_CONFIG_SRCDIR([Makefile.in])

AC_MAKEFOO

# Checks for programs.
AC_PROG_INSTALL
dnl AC_CANONICAL_HOST
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

